tutorial-ui/openshift/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutorial-ui
spec:
  selector:
    app: tutorial-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
