tutorial-ui/openshift/05_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tutorial-ui
spec:
  to:
    kind: Service
    name: tutorial-ui
  port:
    targetPort: 8080
  tls:
    termination: edge
